# ASK-CLI

./: .env.example  .gitignore  GIT_REPO_DESCRIPTION.md  LICENSE  PROJECT_SUMMARY.md  README.md  SHORT_DESCRIPTION.txt  USAGE.md  ask.bat  ask.ps1  ask.sh  demo.py  install.py  main.py  pyproject.toml  test_setup.py
askcli/: __init__.py  answer.py  cli.py  config.py  fetcher.py  models.py  prompts.py
askcli/llm/: base.py  gemini_client.py  groq_client.py
askcli/search/: base.py  duckduckgo.py
